# plotly_p

./: pyproject.toml
plotly_p/: main.py  tab.csv  tab.xlsx
