[tool.poetry]
name = "plotly-p"
version = "0.1.0"
description = ""
authors = ["NickSheva <nikolayshevtsov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.4"
lxml = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
